--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
 <body >
 
 <style type="text/css">
+@media (min-width: 100px) and (max-width: 450px) {
   #searches {
     border-radius: 20px;
     width: 120%;
@@ -67,7 +68,60 @@
     overflow-y: scroll;
     max-height: 350px;
   }
-  @media (max-width: 767px) {
+  }
+
+  @media (min-width: 450px) and (max-width: 600px) {
+  #searches {
+    border-radius: 20px;
+    width: 130%;
+    position: relative;
+    right: 30px;
+  }
+  #putaso {
+    width: 130%;
+    border-radius: 15px;
+    position: relative;
+    right: -100px;
+    overflow-y: scroll;
+    max-height: 350px;
+  }
+  }
+
+
+   @media (min-width: 600px) and (max-width: 767px) {
+  #searches {
+    border-radius: 20px;
+    width: 200%;
+    position: relative;
+    right: 30px;
+  }
+  #putaso {
+    width: 200%;
+    border-radius: 15px;
+    position: relative;
+    right: -170px;
+    overflow-y: scroll;
+    max-height: 350px;
+  }
+  }
+
+  @media (min-width: 767px) and (max-width: 991px) {
+  #searches {
+    border-radius: 20px;
+    width: 230%;
+    position: relative;
+    right: 30px;
+  }
+  #putaso {
+    width: 230%;
+    border-radius: 15px;
+    position: relative;
+    right: -233px;
+    overflow-y: scroll;
+    max-height: 350px;
+  }
+  }
+  @media (max-width: 991px) {
     #searchshow {
       display: none;
     }
@@ -76,18 +130,20 @@
     }
   }
 
-  @media (min-width: 767px) {
+  @media (min-width: 992px) {
     #page-transitions {
       display:none;
     }
   }
+
+
 </style>
   <div id="page-transitions">
 
 <div class="header " style="height: 68px; background: #020D18;">
 <a href="#" class="header-icon-1 show-left-sidebar" style="color: white;"><i class="fa fa-navicon"></i></a>
 <a href="#" class="header-logo"><img style="height: 35px; margin-left:20%; margin-top: 15px; " src="{% static 'img/waologo.png' %}"></a>
-  <a onclick="mac()" class="{% if request.user.is_authenticated %}header-icon-3{% else %}header-icon-4{% endif %}" {% if request.user.is_authenticated %}  style="margin-right:-5%;" {% endif %}>
+  <a onclick="mac()" id="redis" class="{% if request.user.is_authenticated %}header-icon-3{% else %}header-icon-4{% endif %}" {% if request.user.is_authenticated %}  style="margin-right:;" {% endif %}>
  
               <i class="fa fa-search" id="searchshower" style="color: white;" ></i></a>
               {% if request.user.is_authenticated %}
@@ -98,7 +154,7 @@
 <div id="searchdiv" style=" display: none;background-color: rgba(0,0,0,0.80); width: 100%; height: 100%; position: fixed; z-index: 1;">
   <div style="display: block; background: blue;">
   <form id="searchdiv" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">
-  <input class="form-control" type="search" placeholder="Search" id="searches">
+  <input class="form-control" type="search" placeholder="Buscar en WaoMovies..." id="searches">
   <ul class="list-group" id="putaso" style=" position: absolute;"></ul>
 </form>
 
@@ -119,11 +175,11 @@ $(document).ready(function(){
   var resultac = document.getElementById('putaso')
   var widthscreen = $( window ).width()
 
-  if (widthscreen <= 767) {
+  if (widthscreen <= 991) {
     var search = document.getElementById('searchshow').style.display = 'initial'
   $.getJSON('/pelis/', function(data) {
    $.each(data, function(key, value){
-    if (value.titulo.search(expression) != -1 || value.director.search(expression) != -1 && resulta.value.length > 3 && widthscreen < 767)
+    if (value.titulo.search(expression) != -1 || value.director.search(expression) != -1 && resulta.value.length > 3 && widthscreen < 991)
     {
      $('#putaso').append('<li id="'+value.slug+'" class=" '+value.slug+' list-group-item link-class"><a style="color: black;" href="/peliculas/'+value.slug+'/"><img src="'+value.Cover+'" height="40" width="40" class="img-thumbnail" /> '+value.titulo+' | <span class="text-muted">'+value.director+'</span></a></li>');
      if (document.getElementsByClassName(''+value.slug+'').length > 1)
@@ -143,7 +199,7 @@ $(document).ready(function(){
               result.style.display = "none";
           }
       }
-    if (resulta.value.length > 3 && widthscreen < 767)
+    if (resulta.value.length > 3 && widthscreen < 991)
     {
       resultac.style.display = "initial"
 
@@ -259,15 +315,13 @@ var resultac = document.getElementById('result').style.display= "none";
 
 <p class="sidebar-divider">Redes</p>
 <div class="sidebar-menu">
-<a class="default-link menu-item" href="https://www.facebook.com/enabled.labs">
+<a class="default-link menu-item" href="https://www.facebook.com/WaoMovies-312032219581979/">
 <em>Facebook</em>
 </a>
-<a class="default-link menu-item" href="https://twitter.com/iEnabled">
-<em>Twitter</em>
+<a class="default-link menu-item" href="https://www.instagram.com/waomovies/">
+<em>Instagram</em>
 </a>
-<a class="default-link menu-item" href="https://plus.google.com/u/1/100477648973116025417/posts">
-<em>Google Plus</em>
-</a>
+
 <a class="default-link menu-item" href="#">
 <em>YouTube</em>
 </a>
@@ -1047,7 +1101,7 @@ var load = false
 
                             </div>
                             <li class="dropdown-footer text-center ">
-                                <a href="/notificacionesfeed/{{ request.user.username }}/" class="white-text" ><p style="color: white; ">Ver más</p></a>
+                                <a href="/actividadfeed/{{ request.user.username }}/" class="white-text" ><p style="color: white; ">Ver más</p></a>
                             </li>
             </ul>
 
@@ -1104,10 +1158,11 @@ $('#noticount').empty();
 
      $.getJSON('/noti/') 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#noticount').append(''+data[0].unread+'');
 }
- 
+ }
    });
 }, 3000);
     }
@@ -1125,9 +1180,8 @@ $('#notid').remove();
   $.getJSON('/noti/') 
 
   .done(function(data) {
-    
+    if (data.length > 0) {
 $('#noticountt').append('<li id="notid" class="dropdown-header" style="background: #1C2833; color: white; font-weight: bold; margin-top: -2px; text-align: center; font-size: 16px;">Notificaciones ('+data[0].unread+')</li>');
-
    $.each(data, function(key, value){
     if(value.status == "Unread") {
      $('#panelnoti').append('<li class="media notihover"><a href="'+value.urlton+'"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="'+value.userimg+'" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold;">'+value.mensaje+' en '+value.titulon+'.</p><div class="text-muted" style="font-size: 12px; text-align: right; ">Hace '+value.timesince+'</div></div></a></li>');
@@ -1139,7 +1193,10 @@ $('#noticountt').append('<li id="notid" class="dropdown-header" style="backgroun
     
    
 
-   });  
+   });
+} else {
+    $('#panelnoti').append('<li class="media notihover"><a href="#"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="{% static 'img/waoperfil.png' %}" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold; width:98%; margin-left:20px;"> No hay notificaciones.</p><div class="text-muted" style="font-size: 15px; text-align: right; "></div></div></a></li><br/>');
+}
    });
 
 $.getJSON('/read/') 
@@ -1153,10 +1210,11 @@ $(document).ready(function(){
   $.getJSON('/noti/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#noticount').append(''+data[0].unread+'');
 }
- 
+ }
    });
 
 
@@ -1212,7 +1270,7 @@ $('#comp').remove();
   $.getJSON('/compartir/') 
 
   .done(function(data) {
-    
+    if (data.length > 0) {
 $('#acticount').append('<li id="comp" class="dropdown-header" style="background: #1C2833; color: white; font-weight: bold; margin-top: -2px; text-align: center; font-size: 16px;">Actividad ('+data[0].unread+')</li>');
 
    $.each(data, function(key, value){
@@ -1226,7 +1284,10 @@ $('#acticount').append('<li id="comp" class="dropdown-header" style="background:
     
    
 
-   });  
+   }); 
+    } else {
+    $('#panelacti').append('<li class="media notihover"><a  href="#"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="{% static 'img/waoperfil.png' %}" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold; width: 88%; margin-left: 20px;">Aún no tienes actividad, Agrega amigos a través de tu código y si aún no tienes ¡Crealo en tu perfil! ¿Qué estás esperando?, No te olvides de compartir tus películas, series y capitulos favoritos con tus amigos.</p ></div></a>   </li><div class="added-images"><a href="#"><img src="{% static 'img/compartir.jpg' %}" class="z-depth-1 rounded mb-md-0 mb-2" style="height:150px;"></a> </div><br/><div class="text-muted" style="font-size: 15px; text-align: right; color:#A26060;"></div> <blockquote style="color:#A7A7A7; font-size:17px; ">"Estar en casa sin películas es ser un alma en pena."</blockquote>');
+   }  
    });
 $.getJSON('/compread/') 
 
@@ -1241,10 +1302,11 @@ $.getJSON('/compread/')
   $.getJSON('/compartir/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#labelcountcomp').append(''+data[0].unread+'');
 }
- 
+ }
    });
 
 
@@ -1267,22 +1329,23 @@ var pasar2 = 0
  $.getJSON('/noti/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
       pasar = data[0].unread
         
 }
- 
+ }
    });
 
 
    $.getJSON('/compartir/') 
-
   .done(function(data) {
+if(data.length > 0){
     if(data[0].unread > 0){
       pasar2 = data[0].unread
         
 }
- 
+} 
    });
 
 
@@ -1294,6 +1357,7 @@ var pasar2 = 0
     }, 
 success: function(){
          load =  document.getElementById('displayloadmovil').style.display="none"
+
          setTimeout(function(){
 
    $.ajaxSetup({ cache: false,
@@ -1307,6 +1371,32 @@ success: function(){
 
 
  });
+
+   var pasar = 0
+var pasar2 = 0
+
+
+ $.getJSON('/noti/') 
+
+  .done(function(data) {
+    if(data.length > 0){
+    if(data[0].unread > 0){
+      pasar = data[0].unread
+        
+}
+ }
+   });
+
+
+   $.getJSON('/compartir/') 
+  .done(function(data) {
+if(data.length > 0){
+    if(data[0].unread > 0){
+      pasar2 = data[0].unread
+        
+}
+} 
+   });
    $('#totalnotisa').empty();
    var jiji = pasar + pasar2
    if (jiji > 0) {
@@ -1319,10 +1409,11 @@ $('#noticountmovil').empty();
 
      $.getJSON('/noti/') 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#noticountmovil').append(''+data[0].unread+'');
 }
- 
+} 
    });
 }, 3000);
     }
@@ -1341,7 +1432,7 @@ $('#panel11noti').empty();
   .done(function(data) {
     
 
-
+if(data.length > 0){
    $.each(data, function(key, value){
     if(value.status == "Unread") {
      $('#panel11noti').append('<li class="media notihover"><a href="'+value.urlton+'"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="'+value.userimg+'" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold; width:90%; margin-left:20px;">'+value.mensaje+' en '+value.titulon+'.</p><div class="text-muted" style="font-size: 15px; text-align: right; ">Hace '+value.timesince+'</div></div></a></li><br/>');
@@ -1353,7 +1444,10 @@ $('#panel11noti').empty();
     
    
 
-   });  
+   });
+   }  else {
+    $('#panel11noti').append('<li class="media notihover"><a href="#"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="{% static 'img/waoperfil.png' %}" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold; width:98%; margin-left:20px;"> No hay notificaciones.</p><div class="text-muted" style="font-size: 15px; text-align: right; "></div></div></a></li><br/>');
+   }
    });
 
 $.getJSON('/read/') 
@@ -1367,10 +1461,11 @@ $(document).ready(function(){
   $.getJSON('/noti/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#noticountmovil').append(''+data[0].unread+'');
 }
- 
+} 
    });
 
 
@@ -1384,9 +1479,10 @@ var pasar2 = 0
  $.getJSON('/noti/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
       pasar = data[0].unread
-        
+ }       
 }
  
    });
@@ -1395,11 +1491,12 @@ var pasar2 = 0
    $.getJSON('/compartir/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
       pasar2 = data[0].unread
         
 }
- 
+ }
    });
 $(document).ready(function(){
 var jiji = pasar + pasar2
@@ -1421,22 +1518,24 @@ var pasar2 = 0
  $.getJSON('/noti/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
       pasar = data[0].unread
         
 }
- 
+ }
    });
 
 
    $.getJSON('/compartir/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
       pasar2 = data[0].unread
         
 }
- 
+ }
    });
 
 
@@ -1447,7 +1546,7 @@ var pasar2 = 0
     }, 
 success: function(){
          load =  document.getElementById('displayloadmovil').style.display="none"
-
+ 
          setTimeout(function(){
 
    $.ajaxSetup({ cache: false,
@@ -1461,6 +1560,32 @@ success: function(){
 
 
  });
+
+   var pasar = 0
+var pasar2 = 0
+
+
+ $.getJSON('/noti/') 
+
+  .done(function(data) {
+    if(data.length > 0){
+    if(data[0].unread > 0){
+      pasar = data[0].unread
+        
+}
+ }
+   });
+
+
+   $.getJSON('/compartir/') 
+  .done(function(data) {
+if(data.length > 0){
+    if(data[0].unread > 0){
+      pasar2 = data[0].unread
+        
+}
+} 
+   });
    $('#totalnotisa').empty();
    var jiji = pasar + pasar2
    if (jiji > 0) {
@@ -1473,10 +1598,11 @@ $('#labelcountact').empty();
 
      $.getJSON('/compartir/') 
   .done(function(data) {
+    if(data.length > 0){
  if(data[0].unread > 0){   
 $('#labelcountact').append(''+data[0].unread+'');
 }
- 
+ }
    });
 }, 3000);
     }
@@ -1493,7 +1619,7 @@ $('#panel12acti').empty();
 
   .done(function(data) {
     
-
+if(data.length > 0){
 
    $.each(data, function(key, value){
     if(value.statu == "Unread") {
@@ -1506,7 +1632,10 @@ $('#panel12acti').empty();
     
    
 
-   });  
+   });
+   } else {
+    $('#panel12acti').append('<li class="media notihover"><a  href="#"><div class="pull-left"><i class="fa fa-circle" aria-hidden="true" style="color:#21618C; font-size: 10px; margin-top: 6px; margin-right: 8px;"></i><img src="{% static 'img/waoperfil.png' %}" class="media-object" style="width:30px; height:30px; border-radius: 50%; margin-right: 10px;" alt="" /></div><div class="media-body"><p style="font-weight: bold; width: 88%; margin-left: 20px;">Aún no tienes actividad, Agrega amigos a través de tu código y si aún no tienes ¡Crealo en tu perfil! ¿Qué estás esperando?, No te olvides de compartir tus películas, series y capitulos favoritos con tus amigos.</p ></div></a>   </li><div class="added-images"><a href="#"><img src="{% static 'img/compartir.jpg' %}" class="z-depth-1 rounded mb-md-0 mb-2" style="height:150px;"></a> </div><br/><div class="text-muted" style="font-size: 15px; text-align: right; color:#A26060;"></div> <blockquote style="color:#A7A7A7; font-size:17px; ">"Estar en casa sin películas es ser un alma en pena."</blockquote>');
+   }  
    });
 $.getJSON('/compread/') 
 
@@ -1521,10 +1650,11 @@ $.getJSON('/compread/')
   $.getJSON('/compartir/') 
 
   .done(function(data) {
+    if(data.length > 0){
     if(data[0].unread > 0){
 $('#labelcountact').append(''+data[0].unread+'');
 }
- 
+ }
    });
 
 
