--- a/templates/base.html
+++ b/templates/base.html
@@ -411,7 +411,7 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
 
 <div id="searchdiv" style=" display: none;background-color: rgba(0,0,0,0.80); width: 100%; height: 100%; position: fixed; z-index: 1;">
   <div style="display: block; background: blue;">
-  <form id="searchdiv" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">
+  <form method="post" id="searchdiv" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">
   <input class="form-control" type="search" name="src" placeholder="Buscar en WaoMovies..." id="searches">
   <ul class="list-group" id="putaso" style=" position: absolute;"></ul>
 </form>
