--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -34,6 +34,64 @@ function getData() {
 }
 </script>
 
+<script type="text/javascript">
+function compartirshare(b) {
+
+              
+
+             var $myForm = $('.formshare')
+             $myForm.submit(function(event){
+                 event.preventDefault()
+                 event.stopImmediatePropagation();
+                 var $formData = $(this).serialize()
+                 var $thisURL = $myForm.attr('data-url') || window.location.href 
+                 $.ajax({
+                     method: "POST",
+                     url: $thisURL,
+                     data: $formData,
+                     success: handleFormSuccess,
+                     error: handleFormError,
+                     beforeSend: function () {
+              document.getElementById('displayloaz').style.display="initial"
+              document.getElementById('moda-bodycharge').style.display="none"
+
+                    
+                },
+                    
+
+
+                 })
+
+             })
+
+             function handleFormSuccess(data, textStatus, jqXHR){
+                 console.log(data)
+                 console.log(textStatus)
+                 console.log(jqXHR)
+                 $myForm[0].reset(); 
+       
+document.getElementById('displayloaz').style.display="none"
+              
+              $("#moda-bodycharge").load(window.location + " #moda-bodycharge");
+              $('#mensajeshare').append('<big style="color: gray;"><strong>¡Se ha compartido con exito!</strong></big>');
+              valores = ""
+              no_a_enviar = ""
+                 
+$(this).remove();
+         }
+
+             function handleFormError(jqXHR, textStatus, errorThrown){
+                 console.log(jqXHR)
+                 console.log(textStatus)
+                 console.log(errorThrown)
+             }
+             
+             
+             
+             }
+
+
+             </script>
 
 <script type=”text/javascript”>
       
@@ -859,6 +917,8 @@ $(this).remove();
                      beforeSend: function () {
                     $("#load" + c).removeClass('fa-chevron-down');
                     $("#load" + c).addClass('fa-circle-o-notch');
+                 $myForm[1].style.display = 'none'
+
        
                      //Agregamos la clase loading al body
 
@@ -877,7 +937,8 @@ $(this).remove();
                  console.log(jqXHR)
                  $myForm[0].reset(); 
                  $myForm[1].reset(); 
-                 $myForm[1].style.display = 'none'
+                 $myForm[1].style.display = 'initial'
+
        $("#j" + c).load(window.location + " #j" + c);
        $("#like_div" + c).load(window.location + " #like_div" + c);
        $("#ccn" + c).append(' <div id="rs'+data.idp+'"><div class="mv-user-review-item" style="margin-bottom: -6px; width: 70%; position: relative; left: 40px;"><div class="user-infor" style="margin-bottom: -0px;"><img style="border-radius: 50%; width: 50px; height: 50px;" src="'+data.perfil+'" alt=""><div><h3 style="font-size: 16px; display:initial;">'+data.name+'</h3><i id="cog'+data.idp+'" style="cursor: pointer; color: grey; position: relative; top: -4x;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="fa fa-cog dropdown-toggle px-3"></i><div class="btn-group"><div class="dropdown-menu"><a class="dropdown-item" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample">Editar comentario<i style="position:relative; left: 8.5%; padding-left: 8px;" class="fa  fa-edit" aria-hidden="true"></i></a><form style="display: inline;" class="dele_ans'+data.idp+'" data-url="/delete_res/'+data.idp+'/" method="post">'+token+'<button onclick="deletee_res(this)" name="'+data.id+'"id="dele_ans'+data.idp+'" style="background: none; border: none;"><a class="dropdown-item">Eliminar respuesta<i style="padding-left: 8px;" class="fa fa-trash-o" aria-hidden="true"></i></a></button></form><!--a class="dropdown-item" href="#">Something else here</a><div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a--></div></div><p class="time" style="margin-top: -0x;">'+data.fecha+'</p></div></div><p id="cm'+data.idp+'" style="margin-bottom: -15px;">'+data.content+'</p></div></div><div class="collapse container" id="col'+data.idp+'"><div class="mt-3"><div class="md-form form-lg"><form method="post" class="updateup_ans'+data.idp+'" data-url="/responder_update/'+data.idp+'/">'+token+'<textarea id="textoans'+data.idp+'" onkeypress="return limita(400);" style=" height: 6em; width: 400px;" name="respuesta">'+data.content+'</textarea><br><input onclick="update_ans(this)" id="up_ans'+data.idp+'" style="border: none; cursor: pointer" type="submit" title="Editar" name="" class="redbtn" style="padding: 7px;" value="Editar"><a style=" padding: 7px;   " class="" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-close"  aria-hidden="true"></i></a></form></div></div></div>');
@@ -1079,7 +1140,7 @@ $(this).remove();
      <img src="{{ peliculaa.Cover.url }}" alt="" style="height: 440px; width: auto;">
      <div id="moviebtna" class="movie-btn" > 
       <div class="btn-transform transform-vertical red">
-       <div><a href="#" class="item item-1 redbtn">  Ver Trailer</a></div>
+       <div><a data-toggle="modal" data-target="#modalyoutube" class="item item-1 redbtn">  Ver Trailer</a></div>
        <div><a data-toggle="modal" data-target="#modalyoutube" class="item item-2 redbtn "><i class="fa fa-play point"></i></a></div>
       </div>
 
@@ -1129,8 +1190,8 @@ $(this).remove();
 </div>
 <!--Modal: modalYoutube-->
       <div class="btn-transform transform-vertical">
-       <div><a href="#" class="item item-1 yellowbtn"> <i class="fa-share-alt fa point"></i> Compartir</a></div>
-       <div><a data-toggle="modal" data-target="#modalSocial" class="item item-2 yellowbtn"><i class="fa-share-alt fa point"></i></a></div>
+       <div><a data-toggle="modal" data-target="#modalSocial" id="sharebuttono" class="item item-1 yellowbtn"> <i class="fa-share-alt fa point"></i> Compartir</a></div>
+       <div><a data-toggle="modal" data-target="#modalSocial" id="sharebuttono2" class="item item-2 yellowbtn"><i class="fa-share-alt fa point"></i></a></div>
       </div>
       
      </div>
@@ -1140,7 +1201,7 @@ $(this).remove();
 
 
 <!--Modal: modalSocial-->
-<div class="modal fade" id="modalSocial" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalSocial" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="margin-top: 60px;">
     <div class="modal-dialog cascading-modal" role="document">
 
         <!--Content-->
@@ -1148,12 +1209,35 @@ $(this).remove();
 
             <!--Header-->
             <div class="modal-header light-blue darken-3 white-text">
-                <h4 class="title"><i class="fa fa-users"></i> ¡Comparte!</h4>
+                <h4 class="title" id="titlemodal"><i class="fa fa-users"></i> ¡Comparte!</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
 
             <!--Body-->
-            <div class="modal-body mb-0 text-center">
+            
+            <div  class="modal-body mb-0 text-center" style="max-height: 350px;">
+
+             <div id="displayloaz" style="display: none; "><img style="position: relative; " height="50" width="50" src="{% static "img/fancybox_loading@2x.gif" %}"></div>  
+
+             <div id="mensajeshare"></div> 
+<div id="moda-bodycharge">
+
+<a onclick="select(this)" id="todos"><i class="fa fa-users" style="font-size: 30px; color: black;"></i> <span style="color: gray; font-weight: bold;">¡Click aquí para compartir con todos!</span></a>
+<br/>
+<br/>
+<div class="container">
+                <ul id="friendiv" style="float: left;">
+
+                   
+                </ul>
+                </div>
+                <form class="formshare" method="post" data-url='/compartir/{{peliculaa.id}}/{{peliculaa.slug}}/'>
+        {% csrf_token %}
+   <input type="hidden" name="users_to_share" value="" id="compartir">
+   <input type="hidden" name="oculto" id="ocultado">
+   <div class="md-form" style="width:80%; margin-left: 20px; height: 30px; float: left;"><input id="input-char-counter" type="text" maxlength="150" class="form-control" name="nota" ><label for="input-char-counter" style="font-size: 14px;">Dejar un mensaje</label></div> <button onclick="compartirshare(this)" id="formshare" type="submit" class="btn btn-primary" style="font-size:15px; margin-left:10px; margin-top: 35px; width: 30px; "><i class="fa fa-send"></i></button>
+</form>
+<br/>
 
  <!--Facebook-->
                 <a href="https://www.facebook.com/sharer/sharer.php?u=http://127.0.0.1:8000/peliculas/{{peliculaa.slug}}/" type="button" class="btn-floating btn-fb" style="background-color: #3b5998"><i class="fa fa-facebook"></i></a>
@@ -1173,7 +1257,7 @@ $(this).remove();
                 <a type="button" class="btn-floating btn-email"><i class="fa fa-envelope"></i></a-->
 
             </div>
-
+</div>
         </div>
         <!--/.Content-->
 
@@ -1242,10 +1326,7 @@ $(this).remove();
      
                <button title="Ver más tarde" class="loginLink btn-ver" type="submit" style="position: relative; left: 50%;"><i style="color: black; font-size: 24px;" class="fa  fa-eye" aria-hidden="true"></i></button>
      {% endif %}
-     <!--form method="post" action="/compartir/{{peliculaa.id}}/{{peliculaa.slug}}/" id="pu" name="algo">
-        {% csrf_token %}
-   <select class="amigosshare" name="users_to_share" id="boot-multiselect-demo" multiple="multiple" onchange="cuales_seleccionados(document.algo.users_to_share);"></select><input type="hidden" name="oculto"> 
-</form-->
+     
 
 
      <form class="reportarr" method='POST' data-url='/reportar/{{ peliculaa.id }}/' enctype='multipart/form-data'>{% csrf_token %}
